<resources>
    <string name="app_name">Scope Zeroing Assistant</string>
    <string name="action_delete_app_files">Delete all target files</string>
    <string name="action_view_target_file">View targets.txt</string>

    <!-- Home fragment -->
    <string name="home_welcome">Welcome to your\nScope Zeroing Assistant!\n\nLet\'s get your scope zeroed in.</string>
    <string name="home_start_btn">BEGIN ZERO</string>
    <string name="home_manual_calc_btn">MANUAL ZEROING CALCULATOR</string>
    <!-- End Home fragment -->

    <!-- Scope Info fragment -->
    <string name="scope_welcome">Let\'s start with getting information about your scope.</string>
    <string name="scope_hint">This information should be on the turrets of your scope.\nMOA will appear as (inches)@100yds.</string>

    <string name="scope_moa_or_mils_textview">MOA or Mils? : </string>

    <string name="scope_moa_increments_textview">MOA Increments: </string>
    <string name="scope_moa_hint">MOA is in inches, ie. 1/4\"@100yds would be 1/4.</string>

    <string name="next">NEXT</string>

    <string-array name="scope_moa_or_mils_array">
        <item>MOA</item>
        <item>Mils</item>
    </string-array>

    <string-array name="scope_moa_increments_array">
        <item>1/8</item>
        <item>1/6</item>
        <item>1/5</item>
        <item>1/4</item>
        <item>1/3</item>
        <item>1/2</item>
        <item>1</item>
    </string-array>
    <!-- End Scope Info fragment -->

    <!-- Target Info fragment -->
    <string name="target_welcome">Now let\'s select your target.</string>
    <string name="target_common_targets">Common Targets</string>
    <string name="target_custom_target">Custom Target</string>
    <!-- End Target Info fragment -->

    <!-- Manual Calculator fragment -->
    <string name="manual_calc_welcome">Precision Zeroing Calculator</string>
    <string name="manual_calc_scope_info">Scope Information:</string>
    <string name="manual_calc_scope_hint">This information should be on the turrets of your scope. MOA will appear as (inches)@100yds.</string>
    <string name="manual_calc_moa_or_mils">MOA or Mils? : </string>
    <string name="manual_calc_moa_increments">MOA increments: </string>
    <string name="manual_calc_moa_hint">MOA is in inches, ie. 1/4\"@100yds would be 1/4.</string>
    <string name="manual_calc_point_of_impact">Point of Impact: </string>
    <string name="manual_calc_poi_hint">(Relative to point of aim)</string>
    <string name="manual_calc_inches_or_centimeters">Inches or centimeters? : </string>
    <string name="manual_calc_elevation">Elevation: </string>
    <string name="manual_calc_windage">Windage: </string>
    <string name="manual_calc_inches">inches</string>
    <string name="manual_calc_cm">cm</string>
    <string name="manual_calc_distance">Distance: </string>
    <string name="manual_calc_elev_wind_hint">ex: 5.5</string>
    <string name="manual_calc_distance_hint">ex: 100</string>
    <string name="manual_calc_elevation_placeholder">Adjust elevation 0 clicks down</string>
    <string name="manual_calc_windage_placeholder">Adjust windage 0 clicks right</string>

    <string-array name="manual_calc_moa_or_mils_array">
        <item>MOA</item>
        <item>Mils</item>
    </string-array>

    <string-array name="manual_calc_moa_increments_array">
        <item>1/8</item>
        <item>1/6</item>
        <item>1/5</item>
        <item>1/4</item>
        <item>1/3</item>
        <item>1/2</item>
        <item>1</item>
    </string-array>

    <string-array name="manual_calc_inches_cm_array">
        <item>inches</item>
        <item>cm</item>
    </string-array>

    <string-array name="manual_calc_high_low_array">
        <item>high</item>
        <item>low</item>
    </string-array>

    <string-array name="manual_calc_left_right_array">
        <item>left</item>
        <item>right</item>
    </string-array>

    <string-array name="manual_calc_distance_array">
        <item>yards</item>
        <item>meters</item>
    </string-array>
    <!-- End Manual Calculator fragment -->

    <!-- Distance Fragment -->
    <string name="distance_fragment_welcome">Finally, we just need the distance to the target and we\'ll be set to get your scope zeroed in.</string>
    <string name="distance_fragment_yards_or_meters">Yards or Meters?: </string>
    <string name="distance_fragment_distance">Distance: </string>
    <string name="distance_fragment_yards_meters">yards</string>
    <string name="distance_fragment_yards">yards</string>
    <string name="distance_fragment_meters">meters</string>
    <string name="distance_fragment_zero_scope">Zero Scope</string>
    <!-- End Distance Fragment -->

    <!-- Zero Fragment -->
    <string name="zero_fragment_image_view_content_desc">Holds bitmap of TouchImageView result</string>
    <string name="zero_fragment_set_zoom">Zoom in your target to desired area then Lock Target</string>
    <string name="zero_fragment_select_poa">Touch your Point of Aim</string>
    <string name="zero_fragment_select_poi">Touch the Point of Impact</string>
    <string name="zero_fragment_adjustments_calculated">Touch target to reset</string>
    <string name="zero_fragment_reset_target">Touch again to Reset</string>
    <string name="zero_fragment_lock">LOCK TARGET</string>
    <string name="zero_fragment_unlock">UNLOCK TARGET</string>
    <string name="zero_fragment_finished">FINISH ZERO</string>
    <!-- End Zero Fragment -->

    <!-- Add Target Activity -->
    <string name="add_target_content_description">Target Image</string>
    <string name="add_target_take_picture">TAKE PICTURE</string>
    <string name="add_target_target_name">Target Name: </string>
    <string name="add_target_target_height">Height: </string>
    <string name="add_target_dimensions_hint">inches</string>
    <string name="add_target_target_width">Width: </string>
    <string name="add_target_cancel">Cancel</string>
    <string name="add_target_add_target">ADD TARGET</string>
    <!-- End Add Target Activity -->

</resources>
