<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/home_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/textMain"
        android:textSize="22sp"
        android:textAlignment="center"
        android:text="@string/home_welcome"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/home_welcome_text">

        <Button
            android:id="@+id/begin_zero_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/hspace1"
            android:layout_centerHorizontal="true"
            style="@style/AppTheme.RoundedCornerButton"
            android:foreground="?attr/selectableItemBackground"
            android:textColor="@color/textBlack"
            android:text="@string/home_start_btn" />

        <Space
            android:id="@+id/hspace1"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"/>

        <Button
            android:id="@+id/manual_calc_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hspace1"
            style="@style/AppTheme.RoundedCornerButton"
            android:foreground="?attr/selectableItemBackground"
            android:layout_centerHorizontal="true"
            android:textColor="@color/textBlack"
            android:text="@string/home_manual_calc_btn" />

    </RelativeLayout>

</RelativeLayout>